build: for local deploy

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,15 +8,13 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=faraday
-    ports:
-      - '5432'
     volumes:
-      - "db:/var/lib/postgresql/data:rw"
+      - "../files/db:/var/lib/postgresql/data:rw"
+
   redis:
     image: 'redis:6.2-alpine'
     container_name: faraday_redis
-    ports:
-      - '6379'
+
   app:
     image: index.docker.io/faradaysec/faraday
     restart: always
@@ -35,6 +33,7 @@ services:
      - redis
     ports:
      - "5985:5985"
+
 volumes:
   db:
     driver: local
